mule-user-guide/v/4.0/_toc.adoc
// Mule User Guide 4 TOC

* link:/mule-user-guide/v/4.0/index[About Mule]
** link:/mule-user-guide/v/4.0/mule-runtime-updates[What's New]
*** link:/mule-user-guide/v/4.0/mule-4-changes[Mule Runtime 4.0 Changes]
*** link:/mule-user-guide/v/4.0/dataweave2-syntax-changes[DataWeave 2.0 Syntax Changes]
+
** link:/mule-user-guide/v/4.0/hardware-and-software-requirements[Hardware and Software Requirements]
+
** link:/mule-user-guide/v/4.0/mule-application-about[About the Mule App]
*** link:/mule-user-guide/v/4.0/about-flows[About Flows]
*** link:/mule-user-guide/v/4.0/about-operations[About Operations]
*** link:/mule-user-guide/v/4.0/scopes-concept[About Scopes]
*** link:/mule-user-guide/v/4.0/about-routers[About Routers]
*** link:/mule-user-guide/v/4.0/about-transformers[About Transformers (Deprecated)]
*** link:/mule-user-guide/v/4.0/global-elements[About Global Elements]
**** link:/mule-user-guide/v/4.0/tls-configuration[About TLS Configuration]
+
** link:/mule-user-guide/v/4.0/about-mule-event[About the Mule Event]
*** link:/mule-user-guide/v/4.0/about-mule-message[About the Mule Message]
*** link:/mule-user-guide/v/4.0/about-mule-variables[About Variables in the Mule Event]
*** link:/mule-user-guide/v/4.0/about-event-processors[About Event Processors]
*** link:/mule-user-guide/v/4.0/about-event-source[About the Event Source]
** link:/mule-user-guide/v/4.0/about-components[Mule Components]
*** link:/mule-user-guide/v/4.0/async-scope-reference[About the Async Scope]
*** link:/mule-user-guide/v/4.0/batch-processing-concept[About Batch Processors]
**** link:/mule-user-guide/v/4.0/batch-job-concept[About Batch Job]
***** link:/mule-user-guide/v/4.0/filter-records-batch-faq[FAQ: How to Filter Records in a Batch Step]
***** link:/mule-user-guide/v/4.0/batch-execution-order-faq[FAQ: Batch Jobs Execution Order]
***** link:/mule-user-guide/v/4.0/batch-error-handling-faq[FAQ: How to Handle Failures During Batch Job]
***** link:/mule-user-guide/v/4.0/batch-performance-faq[FAQ: Understanding Batch Job Performance]
**** link:/mule-user-guide/v/4.0/batch-aggregator-concept[About The Batch Aggregator]
***** link:/mule-user-guide/v/4.0/fix-batch-aggregator-concept[About The Fixed Size Batch Aggregator]
***** link:/mule-user-guide/v/4.0/stream-batch-aggregator-concept[About The Streaming Batch Aggregator]
*** link:/mule-user-guide/v/4.0/cache-scope[About Cache Scope]
**** link:/mule-user-guide/v/4.0/cache-scope-to-configure[To Configure the Cache Scope]
**** link:/mule-user-guide/v/4.0/cache-scope-strategy[To Set Up a Caching Strategy]
*** link:/mule-user-guide/v/4.0/choice-router-concept[About Choice Router]
**** link:/mule-user-guide/v/4.0/choice-router-xml-reference[Choice Router XML Reference]
*** link:/mule-user-guide/v/4.0/flowref-about[About Flow Ref]
*** link:/mule-user-guide/v/4.0/for-each-scope-concept[About For Each Scope]
**** link:/mule-user-guide/v/4.0/for-each-scope-xml-reference[For Each Scope Reference]
*** link:/mule-user-guide/v/4.0/remove-variable[About Remove Variable]
*** link:/mule-user-guide/v/4.0/scheduler-concept[About Scheduler]
**** link:/mule-user-guide/v/4.0/scheduler-xml-reference[Scheduler XML Reference]
*** link:/mule-user-guide/v/4.0/scatter-gather-concept[About Scatter-Gather]
**** link:/mule-user-guide/v/4.0/scatter-gather-xml-reference[Scatter-Gather XML Reference]
*** link:/mule-user-guide/v/4.0/set-payload-transformer-reference[About Set Payload]
*** link:/mule-user-guide/v/4.0/variable-transformer-reference[About Set Variable]
*** link:/mule-user-guide/v/4.0/transform-message-component-concept-design-center[About Transform]
**** link:/mule-user-guide/v/4.0/transform-workflow-create-mapping-ui-design-center[Workflow: Create a Mapping]
***** link:/mule-user-guide/v/4.0/transform-input-output-structure-transformation-design-center-task[To Define Input and Output Structure of a Transformation]
***** link:/mule-user-guide/v/4.0/transform-graphically-construct-mapping-design-center-task[To Graphically Construct a Mapping]
***** link:/mule-user-guide/v/4.0/transform-preview-transformation-output-design-center-task[To Preview the Output of a Transformation]
**** link:/mule-user-guide/v/4.0/transform-to-change-target-output-design-center[To Output a Transformation to an Attribute or Variable]
**** link:/mule-user-guide/v/4.0/transform-dataweave-xml-reference[Transform Message Component XML Reference]
*** link:/mule-user-guide/v/4.0/try-scope-concept[About Try Scope]
**** link:/mule-user-guide/v/4.0/try-scope-xml-reference[Try Scope XML Reference]
*** link:/mule-user-guide/v/4.0/on-error-scope-concept[About On-Error Scopes]
*** link:/mule-user-guide/v/4.0/until-successful-scope[About Until Successful]
+
// ** link:/mule-user-guide/v/4.0/elements-in-a-mule-flow[Elements in a Flow]
+
** link:/mule-user-guide/v/4.0/mule-app-strategies[Strategies and Patterns for Mule Apps]
// TODO: CHECK RECONN STRATEGIES
*** link:/mule-user-guide/v/4.0/reconnection-strategy-about[Reconnection Strategies]
**** link:/mule-user-guide/v/4.0/reconnection-strategy-reference[Reconnection Strategy Reference]
*** link:/mule-user-guide/v/4.0/streaming-about[About Streaming]
**** link:/mule-user-guide/v/4.0/streaming-strategies-reference[Streaming Strategies Reference]
*** link:/mule-user-guide/v/4.0/error-handling[About Error Handling]
**** link:/mule-user-guide/v/4.0/mule-error-concept[About the Mule Error]
*** link:/mule-user-guide/v/4.0/configuring-properties[About Property Placeholders]
**** link:/mule-user-guide/v/4.0/mule-app-properties-to-configure[To Create Property Placeholders for Mule Apps]
**** link:/mule-user-guide/v/4.0/mule-app-properties-system[Working with System Properties]
** link:/mule-user-guide/v/4.0/mmp-concept[About the Mule Maven Plugin]
*** link:/mule-user-guide/v/4.0/add-mmp-task[To Add the Mule Maven Plugin to a Project]
*** link:/mule-user-guide/v/4.0/packager-concept[About the Mule Packager Tool]
**** link:/mule-user-guide/v/4.0/package-task-mmp[To Package a Mule Application (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/application-structure-reference[Application Structure Reference]

*** link:/mule-user-guide/v/4.0/mmp-deployment-concept[About Deploying a Mule Application (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/ch-deploy-mule-application-mmp-task[To Deploy a Mule Application to CloudHub (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/cloudhub-deployment-mmp-reference[CloudHub Deployment Reference (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/stnd-deploy-mule-application-mmp-task[To Deploy a Mule Application to a Standalone Mule Runtime (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/stnd-deployment-mmp-reference[Standalone Deployment Reference (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/arm-deploy-mule-application-mmp-task[To Deploy a Mule Application Using ARM API (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/arm-deploy-mule-application-mmp-reference[ARM Deployment Reference (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/agent-deploy-mule-application-mmp-task[To Deploy a Mule Application Using the Mule Agent (Mule Maven Plugin)]
**** link:/mule-user-guide/v/4.0/agent-deploy-mule-application-mmp-reference[Mule Agent Deployment Reference (Mule Maven Plugin)]
+
// COMBAK: Add a threading section
//*** link:/mule-user-guide/v4.0/threading-in-mule[Threading reference]
// QQ: Batch Docs
//*** link:/mule-user-guide/v/4.0/batch[About Batch Jobs]
// QQ: We need to document transactions. Is it changing?
// link:/mule-user-guide/v/4.0/transactions-concept[About Transactions]
+
** link:/mule-user-guide/v/4.0/dataweave[DataWeave Language]
*** link:/mule-user-guide/v/4.0/dataweave-language-introduction[Language Introduction]
*** link:/mule-user-guide/v/4.0/dataweave-cookbook[DataWeave Cookbook]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-extract-data[To Extract Data]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-perform-basic-transformation[To Perform a Basic Transformation]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-map[To Map Data]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-map-an-object[To Map an Object]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-map-object-elements-as-an-array[To Map Object Elements as an Array]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-java-methods[To Call Java Methods]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-rename-keys[To Rename Keys]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-output-a-field-when-present[To Output a Field When Present]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-format-according-to-type[To Change Format According to Type]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-regroup-fields[To Regroup Fields]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-zip-arrays-together[Zip Arrays Together]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-pick-top-elements[Pick Top Elements]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-change-value-of-a-field[To Change the Value of a Field]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-exclude-field[To Exclude Fields from the Output]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-use-constant-directives[To Use Constant Directives]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-define-a-custom-addition-function[To Define a Custom Addition Function]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-define-function-to-flatten-list[To Define a Function that Flattens Data in a List]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-output-self-closing-xml-tags[To Output self-closing XML tags]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-insert-attribute[To Insert an Attribute into an XML Tag]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-remove-certain-xml-attributes[To Remove Certain XML Attributes]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-include-xml-namespaces[Include XML Namespaces]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-reference-multiple-inputs[To Reference Multiple Inputs]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-merge-multiple-payloads[To Merge Multiple Payloads]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-use-constant-directives[To Use Constant Directives]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-parse-dates[To Parse Dates]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-add-and-subtract-time[To Add and Subtracting Dates]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-conditional-list-reduction-via-function[To Conditionally Reduce a List Via a Function]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-map-based-on-an-external-definition[To Map Based On an External Definition]
**** link:/mule-user-guide/v/4.0/dataweave-cookbook-pass-functions-as-arguments[To Pass Functions as Arguments]
+
*** link:/mule-user-guide/v/4.0/dw-functions[DataWeave Functions]
**** link:dw-functions-core-arrays[Arrays (dw::core::Arrays)]
**** link:dw-functions-core-assertions[Assertions (dw::core::Assertions)]
**** link:dw-functions-core-binaries[Binaries (dw::core::Binaries)]
**** link:dw-functions-core[Core (dw::Core)]
**** link:dw-functions-crypto[Encryption (dw::Crypto)]
**** link:dw-functions-core-objects[Objects (dw::core::Objects)]
**** link:dw-functions-runtime[Runtime (dw::Runtime)]
**** link:dw-functions-core-strings[Strings (dw::core::Strings)]
**** link:dw-functions-system[System (dw::System)]
**** link:dw-functions-core-url[URL (dw::core::URL)]
**** link:dataweave-functions-lambdas[Working with Functions and Lambdas in DataWeave]
**** link:/mule-user-guide/v/4.0/dataweave-import-task[To Import DataWeave Function Modules]
**** link:/mule-user-guide/v/4.0/dataweave-create-module-task[To Create a DataWeave Function Module]
*** link:/mule-user-guide/v/4.0/dataweave-memory-management[DataWeave Memory Management]
*** link:/mule-user-guide/v/4.0/dataweave-selectors[DataWeave Selectors]
*** link:/mule-user-guide/v/4.0/dataweave-types[DataWeave Types]
**** link:/mule-user-guide/v/4.0/dataweave-types-coercion[About Type Coercion with DataWeave]
*** link:/mule-user-guide/v/4.0/dataweave-formats[Formats Supported by DataWeave]
+
//** link:/mule-user-guide/v/4.0/runtime-installation-task[To Download and Install the Standalone Mule Runtime 4.0 EE]

//**** link:/mule-user-guide/v/4.0/mule-app-property-placeholders-spring[To Create Placeholders for Spring Configurations]
