mule-user-guide/v/4.1/_toc.adoc
// Mule User Guide 4 TOC

* link:index[About Mule Runtime]
+
// REMOVED FROM TOC NOW THAT MIGRATION GUIDE IS IN
//** link:mule-runtime-updates[What's New]
//*** link:mule-4-changes[Mule Runtime 4.0 Changes]
+
include::_toc-migration.adoc[]
+
** link:mule-application-about[About the Mule App]
*** link:about-flows[About Flows]
*** link:about-operations[About Operations]
*** link:scopes-concept[About Scopes]
*** link:about-routers[About Routers]
+
//*** link:about-transformers[About Transformers (Deprecated)]
+
*** link:global-elements[About Global Elements]
*** link:tls-configuration[About TLS Configuration]
+
** link:about-mule-event[About the Mule Event]
*** link:about-mule-message[About the Mule Message]
*** link:about-mule-variables[About Variables in the Mule Event]
*** link:about-event-processors[About Event Processors]
*** link:about-event-source[About the Event Source]
** link:about-components[Mule Components]
*** link:async-scope-reference[Async Scope]
*** link:batch-processing-concept[Batch Processors]
**** link:batch-job-concept[Batch Job]
***** link:filter-records-batch-faq[FAQ: How to Filter Records in a Batch Step]
***** link:batch-execution-order-faq[FAQ: Batch Jobs Execution Order]
***** link:batch-error-handling-faq[FAQ: How to Handle Failures During Batch Job]
***** link:batch-performance-faq[FAQ: Understanding Batch Job Performance]
**** link:batch-aggregator-concept[Batch Aggregator]
***** link:fix-batch-aggregator-concept[Fixed Size Batch Aggregator]
***** link:stream-batch-aggregator-concept[Streaming Batch Aggregator]
*** link:cache-scope[Cache Scope]
**** link:cache-scope-to-configure[To Configure the Cache Scope]
**** link:cache-scope-strategy[To Set Up a Caching Strategy]
*** link:choice-router-concept[Choice Router]
**** link:choice-router-xml-reference[Choice Router XML Reference]
*** link:dynamic-evaluate-component-reference[Dynamic Evaluate Component]
*** link:first-successful[First Successful Router]
*** link:flowref-about[Flow Ref]
*** link:for-each-scope-concept[For Each Scope]
**** link:for-each-scope-xml-reference[For Each Scope Reference]
*** link:logger-component-reference[Logger]
*** link:raise-error-component-reference[Raise Error Component]
*** link:round-robin[Round Robin Router]
*** link:remove-variable[Remove Variable]
*** link:scheduler-concept[Scheduler]
**** link:scheduler-xml-reference[Scheduler XML Reference]
*** link:scatter-gather-concept[Scatter-Gather]
**** link:scatter-gather-xml-reference[Scatter-Gather XML Reference]
*** link:set-payload-transformer-reference[Set Payload]
*** link:variable-transformer-reference[Set Variable]
*** link:transform-component-about[Transform Message]
**** link:transform-workflow-create-mapping-ui-studio[Workflow: Create a Mapping in Anypoint Studio]
***** link:transform-input-output-structure-transformation-studio-task[To Define Input and Output Structure of a Transformation]
***** link:transform-graphically-construct-mapping-studio-task[To Graphically Construct a Mapping]
***** link:transform-preview-transformation-output-studio-task[To Preview the Output of a Transformation]
***** link:transform-tips-transform-message-ui-studio[Tips on the Transform Message UI]
***** link:transform-change-target-output-transformation-studio-task[To Change the Target Output of a Transformation]
***** link:transform-add-another-output-transform-studio-task[To Add Another Output Target]
***** link:transform-move-transformations-separate-file-studio-task[To Move Transformations to Separate Files]
**** link:transform-workflow-create-mapping-ui-design-center[Workflow: Create a Mapping in Design Center]
***** link:transform-input-output-structure-transformation-design-center-task[To Define Input and Output Structure of a Transformation]
***** link:transform-graphically-construct-mapping-design-center-task[To Graphically Construct a Mapping]
***** link:transform-preview-transformation-output-design-center-task[To Preview the Output of a Transformation]
**** link:transform-to-change-target-output-design-center[To Output a Transformation to an Attribute or Variable]
**** link:transform-dataweave-xml-reference[Transform XML Reference]
*** link:try-scope-concept[Try Scope]
**** link:try-scope-xml-reference[Try Scope XML Reference]
*** link:on-error-scope-concept[On-Error Scopes]
*** link:until-successful-scope[Until Successful]
+
// ** link:elements-in-a-mule-flow[Elements in a Flow]
+
** link:mule-app-strategies[Strategies and Patterns for Mule Apps]
// TODO: CHECK RECONN STRATEGIES
*** link:reconnection-strategy-about[Reconnection Strategies]
**** link:reconnection-strategy-reference[Reconnection Strategy Reference]
*** link:streaming-about[About Streaming]
**** link:streaming-strategies-reference[Streaming Strategies Reference]
*** link:error-handling[About Error Handling]
**** link:mule-error-concept[About the Mule Error]
*** link:configuring-properties[About Property Placeholders]
**** link:mule-app-properties-to-configure[To Create Property Placeholders for Mule Apps]
**** link:mule-app-properties-system[Working with System Properties]
*** link:target-variables[About Target Variables]
** link:mmp-concept[About the Mule Maven Plugin]
*** link:add-mmp-task[To Add the Mule Maven Plugin to a Project]
*** link:packager-concept[About the Mule Packager Tool]
**** link:package-task-mmp[To Package a Mule Application (Mule Maven Plugin)]
**** link:application-structure-reference[Application Structure Reference]
+
// COMBAK: Add a threading section
//*** link:/mule-user-guide/v4.0/threading-in-mule[Threading reference]
// QQ: Batch Docs
//*** link:batch[About Batch Jobs]
// QQ: We need to document transactions. Is it changing?
// link:transactions-concept[About Transactions]
++
*** link:mmp-deployment-concept[About Deploying a Mule Application (Mule Maven Plugin)]
**** link:ch-deploy-mule-application-mmp-task[To Deploy a Mule Application to CloudHub (Mule Maven Plugin)]
**** link:cloudhub-deployment-mmp-reference[CloudHub Deployment Reference (Mule Maven Plugin)]
**** link:stnd-deploy-mule-application-mmp-task[To Deploy a Mule Application to a Standalone Mule Runtime (Mule Maven Plugin)]
**** link:stnd-deployment-mmp-reference[Standalone Deployment Reference (Mule Maven Plugin)]
**** link:arm-deploy-mule-application-mmp-task[To Deploy a Mule Application Using ARM API (Mule Maven Plugin)]
**** link:arm-deploy-mule-application-mmp-reference[ARM Deployment Reference (Mule Maven Plugin)]
**** link:agent-deploy-mule-application-mmp-task[To Deploy a Mule Application Using the Mule Agent (Mule Maven Plugin)]
**** link:agent-deploy-mule-application-mmp-reference[Mule Agent Deployment Reference (Mule Maven Plugin)]
+
** link:dataweave[DataWeave Language]
+
// REMOVED FROM TOC NOW THAT MIGRATION GUIDE IS IN
//*** link:dataweave2-syntax-changes[DataWeave 2.0 Syntax Changes]
+
*** link:dataweave-language-introduction[About DataWeave Scripts]
*** link:dataweave-selectors[DataWeave Selectors]
*** link:dataweave-formats[Data Formats Supported by DataWeave]
**** link:dataweave-flat-file-schemas[DataWeave Flatfile Schemas]
*** link:dataweave-types[DataWeave Types]
**** link:dataweave-types-coercion[About Type Coercion with DataWeave]
*** link:dataweave-variables[About DataWeave Variables]
**** link:dataweave-variables-context[DataWeave Variables for Mule Runtime]
+
// TODO?: COMPLETE **** link:dataweave-type-create[To Create a DataWeave Type]
+
*** link:dataweave-flow-control[About Flow Control in DataWeave]
*** link:dataweave-pattern-matching[Pattern Matching in DataWeave]
*** link:dataweave-lookup[Using `lookup` to Call External Flows]
+
//TODO: VERIFY *** link:dataweave-flow-control-precedence[About Precedence in DataWeave]
+
*** link:dataweave-functions[About DataWeave Functions]
**** link:dataweave-import-module[To Import DataWeave Function Modules]
**** link:dataweave-create-module[To Create a DataWeave Function Module]
*** link:dw-functions[DataWeave Function Reference]
+
include::_toc-dw.adoc[]
+
*** link:dataweave-cookbook[DataWeave Cookbook]
**** link:dataweave-cookbook-extract-data[To Extract Data]
**** link:dataweave-cookbook-perform-basic-transformation[To Perform a Basic Transformation]
**** link:dataweave-cookbook-map[To Map Data]
**** link:dataweave-cookbook-map-an-object[To Map an Object]
**** link:dataweave-cookbook-map-object-elements-as-an-array[To Map Object Elements as an Array]
**** link:dataweave-cookbook-java-methods[To Call Java Methods]
**** link:dataweave-cookbook-rename-keys[To Rename Keys]
**** link:dataweave-cookbook-output-a-field-when-present[To Output a Field When Present]
**** link:dataweave-cookbook-format-according-to-type[To Change Format According to Type]
**** link:dataweave-cookbook-regroup-fields[To Regroup Fields]
**** link:dataweave-cookbook-zip-arrays-together[Zip Arrays Together]
**** link:dataweave-cookbook-pick-top-elements[Pick Top Elements]
**** link:dataweave-cookbook-change-value-of-a-field[To Change the Value of a Field]
**** link:dataweave-cookbook-exclude-field[To Exclude Fields from the Output]
**** link:dataweave-cookbook-use-constant-directives[To Use Constant Directives]
**** link:dataweave-cookbook-define-a-custom-addition-function[To Define a Custom Addition Function]
**** link:dataweave-cookbook-define-function-to-flatten-list[To Define a Function that Flattens Data in a List]
**** link:dataweave-cookbook-output-self-closing-xml-tags[To Output self-closing XML tags]
**** link:dataweave-cookbook-insert-attribute[To Insert an Attribute into an XML Tag]
**** link:dataweave-cookbook-remove-certain-xml-attributes[To Remove Certain XML Attributes]
**** link:dataweave-cookbook-include-xml-namespaces[Include XML Namespaces]
**** link:dataweave-cookbook-reference-multiple-inputs[To Reference Multiple Inputs]
**** link:dataweave-cookbook-merge-multiple-payloads[To Merge Multiple Payloads]
**** link:dataweave-cookbook-use-constant-directives[To Use Constant Directives]
**** link:dataweave-cookbook-parse-dates[To Parse Dates]
**** link:dataweave-cookbook-add-and-subtract-time[To Add and Subtracting Dates]
**** link:dataweave-cookbook-conditional-list-reduction-via-function[To Conditionally Reduce a List Via a Function]
**** link:dataweave-cookbook-map-based-on-an-external-definition[To Map Based On an External Definition]
**** link:dataweave-cookbook-pass-functions-as-arguments[To Pass Functions as Arguments]
+
//TODO? dataweave-test-with-transformer[]
//TODO? dataweave-troubleshooting[]
+
*** link:dataweave-functions-lambdas[Working with Functions and Lambdas in DataWeave]
+
*** link:dataweave-memory-management[DataWeave Memory Management]
+
//** link:runtime-installation-task[To Download and Install the Standalone Mule Runtime 4.0 EE]
+
//**** link:mule-app-property-placeholders-spring[To Create Placeholders for Spring Configurations]
+
//HANDWRITTEN: **** link:dw-functions-core-arrays[Arrays (dw::core::Arrays)]
//HANDWRITTEN: **** link:dw-functions-core-binaries[Binaries (dw::core::Binaries)]
//HANDWRITTEN: **** link:dw-functions-core[Core (dw::Core)]
//HANDWRITTEN: **** link:dw-functions-crypto[Encryption (dw::Crypto)]
//HANDWRITTEN: **** link:dw-functions-core-objects[Objects (dw::core::Objects)]
//HANDWRITTEN: **** link:dw-functions-runtime[Runtime (dw::Runtime)]
//HANDWRITTEN: **** link:dw-functions-core-strings[Strings (dw::core::Strings)]
//HANDWRITTEN: **** link:dw-functions-system[System (dw::System)]
//HANDWRITTEN: **** link:dw-functions-core-url[URL (dw::core::URL)]
+
** link:securing[Security]
*** link:secure-configuration-properties[Secure Configuration Properties]
*** link:cryptography[Cryptography Module]
**** link:cryptography-pgp[PGP]
**** link:cryptography-xml[XML]
**** link:cryptography-jce[JCE]
**** link:cryptography-reference[Cryptography XML Reference]
+
//** link:shared-resources[Shared Resources]
+
** link:mule-4-api-javadoc[Mule API Javadoc] 
** link:mule-standalone[Mule EE Standalone]
*** link:runtime-installation-task[To Download and Install the Mule Runtime EE Standalone]
*** link:hardware-and-software-requirements[Hardware and Software Requirements]
*** link:installing-an-enterprise-license[Installing an Enterprise License]
